fullscreen key on depth estimation

--- a/app/commons-qid/index.html
+++ b/app/commons-qid/index.html
@@ -17,7 +17,7 @@
 
     <script src="../explore2/libs/lc/dist/js/lc_lightbox.lite.js?v0.51.466" type="module"></script>
     <link rel="stylesheet" href="../explore2/libs/lc/dist/css/lc_lightbox.css?v0.51.466" />
-    <link rel="stylesheet" href="../explore2/libs/lc/dist/css/skins/minimal.css" />
+    <link rel="stylesheet" href="../explore2/libs/lc/dist/css/skins/minimal.css?v0.51.466" />
     <script src="../explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
 
     <script src="src/main.js?v0.51.466"></script> 
