--- a/app/commons-qid/index.template.html
+++ b/app/commons-qid/index.template.html
@@ -17,7 +17,7 @@
 
     <script src="../explore2/libs/lc/dist/js/lc_lightbox.lite.js?vCONZEPT_VERSION" type="module"></script>
     <link rel="stylesheet" href="../explore2/libs/lc/dist/css/lc_lightbox.css?vCONZEPT_VERSION" />
-    <link rel="stylesheet" href="../explore2/libs/lc/dist/css/skins/minimal.css" />
+    <link rel="stylesheet" href="../explore2/libs/lc/dist/css/skins/minimal.css?vCONZEPT_VERSION" />
     <script src="../explore2/node_modules/openseadragon/build/openseadragon/openseadragon.min.js"></script>
 
     <script src="src/main.js?vCONZEPT_VERSION"></script> 
