--- a/app/wikipedia/index.html
+++ b/app/wikipedia/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="../explore2/node_modules/jquery.uls/css/jquery.uls.mobile.css" type="text/css">
 
   <link rel="stylesheet" href="../explore2/libs/lc/dist/css/lc_lightbox.css?v0.51.466" />
-  <link rel="stylesheet" href="../explore2/libs/lc/dist/css/skins/minimal.css" />
+  <link rel="stylesheet" href="../explore2/libs/lc/dist/css/skins/minimal.css?v0.51.466" />
 
   <!-- used by klipse code playground -->
   <!--link rel="stylesheet" href="../wikipedia/node_modules/klipse/dist/codemirror.css" type="text/css"/-->
