PDF speaker app

--- a/app/iiif/src/uv.template.html
+++ b/app/iiif/src/uv.template.html
@@ -32,6 +32,10 @@
             height: 576px; */
         }
 
+        .headerPanel {
+          display: none !important;
+        }
+
         #options {
           padding: 0 0 0 0;
           display:none;
