fields with pdf tts

--- a/app/chat/index.html
+++ b/app/chat/index.html
@@ -64,11 +64,11 @@
                 <option value="gpt-4-32k">gpt-4-32k</option>
               </select>
             </div>
-            <div>
+            <div style="display: none;">
               <div>API host</div>
               <input class="inputTextClass" placeholder="https://example.com/" id="apiHostInput" />
             </div>
-            <div>
+            <div style="display: none;">
               <div>API key (only stored in your browser)</div>
               <input class="inputTextClass" type="password" placeholder="sk-xxxxxx" id="keyInput" style="-webkit-text-security: disc;" />
             </div>
