--- a/app/pdf-speaker/index.html
+++ b/app/pdf-speaker/index.html
@@ -25,12 +25,16 @@
 				<div id="pdf-meta" class="navBar" >
 
 					<div id="pdf-buttons">
-						<button id="play-button" onclick="startTextToSpeech()" title="speak"><i class="fa-solid fa-play"></i></button>
+						<button id="play-button" onclick="startTextToSpeech()" title="start"><i class="fa-solid fa-play"></i></button>
 						<button id="resume-button" onclick="resume()" title="resume"><i class="fa-regular fa-circle-pause"></i></button>
 						<button id="pause-button" onclick="pause()" title="pause"><i class="fa-solid fa-pause"></i></button>
 						<button id="filler-button" style="display:none;" onclick="" title="">...</button>
 						<button id="stop-button" onclick="stop()" title="stop"><i class="fa-solid fa-stop"></i></button>
-            <button id="scroll" style="" onclick="scroll()" title="scroll to speaker position"><i class="fa-solid fa-up-down"></i></button>
+            &nbsp; &nbsp;
+            <button id="auto-scroll-button" style="" onclick="toggleAutoScroll()" title="toggle auto-scrolling"><i class="fa-solid fa-toggle-on"></i></button>
+            <button id="scroll-to-button" style="" onclick="scrollTo()" title="manually scroll to speaker position"><i class="fa-solid fa-up-down"></i></button>
+            &nbsp; &nbsp;
+            <button id="reload-button" style="" onclick="init()" title="reload page"><i class="fa-solid fa-arrows-rotate"></i></i></button>
             <button id="upload-button" title="upload PDF"><i class="fa-solid fa-upload"></i></button>
             <button id="download-button" style="display:none;" title="download PDF"><i class="fa-solid fa-download"></i></button>
             <br/>
