--- a/app/pdf-speaker/index.html
+++ b/app/pdf-speaker/index.html
@@ -31,7 +31,7 @@
 						<button id="filler-button" style="display:none;" onclick="" title="">...</button>
 						<button id="stop-button" onclick="stop()" title="stop"><i class="fa-solid fa-stop"></i></button>
             &nbsp; &nbsp;
-            <button id="auto-scroll-button" style="" onclick="toggleAutoScroll()" title="toggle auto-scrolling"><i class="fa-solid fa-toggle-on"></i></button>
+            <button id="auto-scroll-button" style="" onclick="toggleAutoScroll()" title="toggle auto-scrolling"><i class="fa-solid fa-toggle-off"></i></button>
             <button id="scroll-to-button" style="" onclick="scrollTo()" title="manually scroll to speaker position"><i class="fa-solid fa-up-down"></i></button>
             &nbsp; &nbsp;
             <button id="reload-button" style="" onclick="init()" title="reload page"><i class="fa-solid fa-arrows-rotate"></i></i></button>
