--- a/app/ai-image-depth/index.template.html
+++ b/app/ai-image-depth/index.template.html
@@ -25,7 +25,7 @@
       <label id="example">(or try example)</label>
     </label>
   </div>
-  <label id="status">loading image depth viewer...</label>
+  <label id="status"><i class="fa-solid fa-panorama"></i>&nbsp; loading image depth viewer...</label>
   <input id="upload" type="file" accept="image/*" />
 
 
