wd app image width

--- a/app/query/embed.template.html
+++ b/app/query/embed.template.html
@@ -201,8 +201,8 @@ body {
 a.item-link img {
   vertical-align: middle;
   width: 100%;
-  max-width:  120px !important;
-  max-height: 240px !important;
+  /*max-width:  120px !important;*/
+  max-height: 800px !important;
   border-radius: 0.3em;
 }
 
