--- a/app/pdf-speaker/index.template.html
+++ b/app/pdf-speaker/index.template.html
@@ -37,8 +37,8 @@
             <button id="reload-button" style="" onclick="init()" title="reload page"><i class="fa-solid fa-arrows-rotate"></i></i></button>
             <button id="upload-button" title="upload PDF"><i class="fa-solid fa-upload"></i></button>
             <button id="download-button" style="display:none;" title="download PDF"><i class="fa-solid fa-download"></i></button>
-            <br/>
-						<select id="voiceSelect"></select>
+            <!--br/-->
+						<select id="voiceSelect" style="display:none;"></select>
 					</div>
 
          <br/>
