--- a/app/table/index.html
+++ b/app/table/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>table view</title>
-  <link rel='stylesheet' href='./css/materialize.min.css'>
+
+  <link rel='stylesheet' href='../explore2/css/various/materialize.min.css'>
   <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
   <link rel="stylesheet" href="./css/main.css">
 
@@ -40,8 +41,8 @@
 </div>
 <!-- partial -->
 
-<script src='./libs/jquery.dataTables.min.js'></script>
-<script src='./libs/materialize.min.js'></script>
+<script src='../explore2/libs/jquery.dataTables.min.js'></script>
+<script src='../explore2/libs/materialize.min.js'></script>
 <script  src="./src/main.js"></script>
 
 </body>
