--- a/app/orcid/index.template.html
+++ b/app/orcid/index.template.html
@@ -1,25 +1,49 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en" >
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta charset="UTF-8">
   <title>ORCID publications</title>
+
+  <link rel='stylesheet' href='../explore2/css/various/materialize.min.css'>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+  <link rel="stylesheet" href="./css/main.css">
 
   <!-- conzept resources -->
   CONZEPT_COMMON_HTML_INCLUDE
 
 </head>
 
-<body>
-  <h1><i class="fa-brands fa-stack-overflow"></i> Publications</h1>
-  <div id="publications"></div>
+<body id="app">
 
-  <!--h1>Funding</h1>
-  <div id="myFunding"></div-->
+  <h1 id="title"></h1>
+
+  <!-- partial:index.partial.html -->
+  <div class="row">
+    <div id="admin" class="col s12">
+      <div class="card material-table">
+        <div class="table-header">
+
+          <span id="table-title"></span>
+
+          <span class="actions">
+            <a href="#" class="search-toggle waves-effect btn-flat nopadding"><i class="material-icons">search</i></a>
+          </span>
+        </div>
+        <table id="datatable">
+          <thead>
+            <tr>
+              <th>year</th>
+              <th>title</th>
+            </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+  <!-- partial -->
+
+  <script src='../explore2/libs/jquery.dataTables.min.js'></script>
+  <script src='../explore2/libs/materialize.min.js'></script>
+  <script  src="./src/main.js"></script>
 
 </body>
-
-<script src="src/main.js"></script>
-
 </html>
