--- a/app/map/index.template.html
+++ b/app/map/index.template.html
@@ -22,9 +22,8 @@
 
       <div style="position: absolute; left:0; top:0; padding:10px; z-index:9999;">
 
-        <button id="btnOSM" style="float:left; margin: 3px;">OSM</button>
-
-        <button id="btnMQS" style="float:left; margin: 3px;">SAT</button>
+        <!--button id="btnOSM" style="float:left; margin: 3px;">OSM</button>
+        <button id="btnMQS" style="float:left; margin: 3px;">SAT</button-->
 
       </div>
 
