--- a/app/pdf-speaker/index.html
+++ b/app/pdf-speaker/index.html
@@ -3,12 +3,18 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale = 1.0, user-scalable=no" />
+
     <!-- conzept resources -->
     <link href="/assets/fonts/podcastfont/css/PodcastFont.css?v202306131635" rel="stylesheet" type="text/css"><link href="/assets/fonts/fontawesome/css/all.min.css?v6.01" rel="stylesheet" type="text/css"><link  href="/app/explore2/dist/css/conzept/common.css?v0.51.466" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.51.466"></script><script src="/app/explore2/dist/core/utils.js?v0.51.466"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script><script src="/app/explore2/libs/TinyGesture.js"></script>
+
+    <script src="../explore2/node_modules/immortal-db/dist/immortal-db.min.js?v0.51.466"></script>
+
 		<script src="./lib/pdf.js"></script>
 		<script src="./lib/pdf.worker.js"></script>
+
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/1.9.426/pdf_viewer.js"></script> -->
-		<link rel="stylesheet" href="./css/main.css?v004" />
+		<link rel="stylesheet" href="./css/main.css?v005" />
+
 		<title>Conzept PDF Speaker</title>
 
 	</head>
@@ -50,7 +56,7 @@
 				<div id="page-loader">Loading page ...</div>
 			</div>
 		</div>
-		<script src="./src/main.js?v004"></script>
+		<script src="./src/main.js?v005"></script>
 
     <script>
       // keyboard control
