--- a/app/pdf-speaker/index.template.html
+++ b/app/pdf-speaker/index.template.html
@@ -3,12 +3,18 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale = 1.0, user-scalable=no" />
+
     <!-- conzept resources -->
     CONZEPT_COMMON_HTML_INCLUDE
+
+    <script src="../explore2/node_modules/immortal-db/dist/immortal-db.min.js?vCONZEPT_VERSION"></script>
+
 		<script src="./lib/pdf.js"></script>
 		<script src="./lib/pdf.worker.js"></script>
+
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/1.9.426/pdf_viewer.js"></script> -->
-		<link rel="stylesheet" href="./css/main.css?v004" />
+		<link rel="stylesheet" href="./css/main.css?v005" />
+
 		<title>Conzept PDF Speaker</title>
 
 	</head>
@@ -50,7 +56,7 @@
 				<div id="page-loader">Loading page ...</div>
 			</div>
 		</div>
-		<script src="./src/main.js?v004"></script>
+		<script src="./src/main.js?v005"></script>
 
     <script>
       // keyboard control
