fullscreen-key UV app, force showing Safari scrollbar, audio app stying

--- a/app/iiif/src/uv.template.html
+++ b/app/iiif/src/uv.template.html
@@ -112,6 +112,21 @@
 
         resize();
       });
+
+      $('body').keydown(function(event) {
+
+        let key = (event.keyCode ? event.keyCode : event.which);
+
+        if ( key == '70' ){ // "f"
+
+          event.preventDefault();
+
+          document.toggleFullscreen();
+
+        }
+
+      });
+
     </script>
 
      <script type="text/javascript" src="umd/UV.js"></script>
