fix explore object issue

--- a/app/wikipedia/index.html
+++ b/app/wikipedia/index.html
@@ -55,6 +55,7 @@
   <!--script type="module" src="../wikipedia/node_modules/@google/model-viewer/dist/model-viewer.min.js"></script-->
 
   <!-- Conzept data scripts -->
+  <script src="../app/explore2/dist/data/explore.js?v0.51.4836"></script>
   <script src="../explore2/dist/data/datasources.js?v0.51.4836"></script>
   <script src="../explore2/dist/data/fields.js?v0.51.4836"></script>
   <script src="../explore2/dist/data/iso2_codes.js"></script>
