graph sidebar mode

--- a/app/commons-sparql/index.template.html
+++ b/app/commons-sparql/index.template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Conzept: Wikimedia Commons SPARQL</title>
-    <link rel="stylesheet" href="css/style.css?v004">
+    <link rel="stylesheet" href="css/style.css?vCONZEPT_VERSION">
     <meta name="description" content="The View It! tool lets you look up images related to a subject on Wikipedia."/>
     <meta property="og:site_name" content="Wikimedia Commons viewer"/>
     <!--meta property="og:url" content="https://view-it.toolforge.org"/-->
