--- a/app/geofilter/index.template.html
+++ b/app/geofilter/index.template.html
@@ -15,8 +15,7 @@
 
 <div style="position: absolute; left:0; top:0; padding:10px; z-index:9999;">
 
-  <!--button id="btnOSM" style="float:left; margin: 3px;">OSM</button>
-  <button id="btnMQS" style="float:left; margin: 3px;">SAT</button-->
+  <button id="hide-geosearch" onclick="hideGeosearch()" ontouchend="hideGeosearch()" title="close geofilter"><i class="fa-regular fa-circle-xmark"></i></button> &nbsp;
 
   <select name="radius" id="radius">
     <option value="50" selected>50 m</option>
