--- a/app/geofilter/index.template.html
+++ b/app/geofilter/index.template.html
@@ -18,14 +18,16 @@
   <button id="hide-geosearch" onclick="hideGeosearch()" ontouchend="hideGeosearch()" title="close geofilter"><i class="fa-regular fa-circle-xmark"></i></button> &nbsp;
 
   <select name="radius" id="radius">
-    <option value="50" selected>50 m</option>
+    <option value="50">50 m</option>
     <option value="100">100 m</option>
     <option value="250">250 m</option>
-    <option value="500">500 m</option>
     <option value="1000">1 km</option>
-    <option value="2000">2 km</option>
-    <option value="4000">4 km</option>
-    <option value="8000">8 km</option>
+    <option value="5000">5 km</option>
+    <option value="10000">10 km</option>
+    <option value="50000" selected>50 km</option>
+    <option value="100000">100 km</option>
+    <option value="500000">500 km</option>
+    <option value="1000000">1000 km</option>
   </select>
 
 </div>
@@ -47,6 +49,13 @@
     }
 
   });
+
+  function hideGeosearch(){
+
+    parent.postMessage({ event_id: 'hide-geosearch', data: { } }, '*' );
+
+  }
+
 </script>
 
 </body></html>
