--- a/app/geofilter/index.template.html
+++ b/app/geofilter/index.template.html
@@ -7,7 +7,7 @@
     CONZEPT_COMMON_HTML_INCLUDE
 
     <link rel="stylesheet" href="./node_modules/@openglobus/og/css/og.css" type="text/css">
-    <link rel="stylesheet" href="./css/main.css?v0.005" type="text/css">
+    <link rel="stylesheet" href="./css/main.css??vCONZEPT_VERSION" type="text/css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
 
 <div class="ogConsole" style="display: none;"></div>
 
-<script type="module" id="og-sandbox-script" src="./src/main.js?v0.004"></script>
+<script type="module" id="og-sandbox-script" src="./src/main.js??vCONZEPT_VERSION"></script>
 
 <script>
   // keyboard control
