--- a/app/geofilter/index.html
+++ b/app/geofilter/index.html
@@ -7,7 +7,7 @@
     <link href="/assets/fonts/podcastfont/css/PodcastFont.css?v202306131635" rel="stylesheet" type="text/css"><link href="/assets/fonts/fontawesome/css/all.min.css?v6.5.1" rel="stylesheet" type="text/css"><link href="/app/explore2/dist/css/conzept/common.css?v0.51.4836" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.51.4836"></script><script src="/app/explore2/dist/core/utils.js?v0.51.4836"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script><script src="/app/explore2/libs/TinyGesture.js"></script>
 
     <link rel="stylesheet" href="./node_modules/@openglobus/og/css/og.css" type="text/css">
-    <link rel="stylesheet" href="./css/main.css?v0.005" type="text/css">
+    <link rel="stylesheet" href="./css/main.css??v0.51.4836" type="text/css">
 </head>
 
 <body>
@@ -18,21 +18,23 @@
   <button id="hide-geosearch" onclick="hideGeosearch()" ontouchend="hideGeosearch()" title="close geofilter"><i class="fa-regular fa-circle-xmark"></i></button> &nbsp;
 
   <select name="radius" id="radius">
-    <option value="50" selected>50 m</option>
+    <option value="50">50 m</option>
     <option value="100">100 m</option>
     <option value="250">250 m</option>
-    <option value="500">500 m</option>
     <option value="1000">1 km</option>
-    <option value="2000">2 km</option>
-    <option value="4000">4 km</option>
-    <option value="8000">8 km</option>
+    <option value="5000">5 km</option>
+    <option value="10000">10 km</option>
+    <option value="50000" selected>50 km</option>
+    <option value="100000">100 km</option>
+    <option value="500000">500 km</option>
+    <option value="1000000">1000 km</option>
   </select>
 
 </div>
 
 <div class="ogConsole" style="display: none;"></div>
 
-<script type="module" id="og-sandbox-script" src="./src/main.js?v0.004"></script>
+<script type="module" id="og-sandbox-script" src="./src/main.js??v0.51.4836"></script>
 
 <script>
   // keyboard control
@@ -47,6 +49,13 @@
     }
 
   });
+
+  function hideGeosearch(){
+
+    parent.postMessage({ event_id: 'hide-geosearch', data: { } }, '*' );
+
+  }
+
 </script>
 
 </body></html>
