geofilter country layer

--- a/app/geofilter/index.html
+++ b/app/geofilter/index.html
@@ -34,7 +34,7 @@
 
 <div class="ogConsole" style="display: none;"></div>
 
-<script type="module" id="og-sandbox-script" src="./src/main.js??v0.51.4836"></script>
+<script type="module" id="og-sandbox-script" src="./src/main.js?v0.51.4836"></script>
 
 <script>
   // keyboard control
