EASSky app update

--- a/app/esasky/index.template.html
+++ b/app/esasky/index.template.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>ESA SKY app</title>
 
-  <!--link rel="stylesheet" href="./css/main.css"-->
+  <link rel="stylesheet" href="./css/main.css">
 
   <!-- conzept resources -->
   CONZEPT_COMMON_HTML_INCLUDE
