--- a/app/chat/index.template.html
+++ b/app/chat/index.template.html
@@ -61,6 +61,7 @@
               <select id="preSetModel">
                 <option value="gpt-3.5-turbo">gpt-3.5</option>
                 <option value="gpt-4o">gpt-4o</option>
+                <option value="gpt-4-turbo">gpt-4-turbo</option>
                 <option value="gpt-4">gpt-4</option>
                 <option value="gpt-4-32k">gpt-4-32k</option>
               </select>
