new datasource: wikiquote, clear geofilter

--- a/app/audio/index.template.html
+++ b/app/audio/index.template.html
@@ -21,7 +21,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="main.css?v001">
 
   <!-- conzept resources -->
   CONZEPT_COMMON_HTML_INCLUDE
