--- a/app/geofilter/index.html
+++ b/app/geofilter/index.html
@@ -17,6 +17,8 @@
 
   <button id="hide-geosearch" onclick="hideGeosearch()" ontouchend="hideGeosearch()" title="close geofilter"><i class="fa-regular fa-circle-xmark"></i></button> &nbsp;
 
+  <button id="clear-geosearch" onclick="clearGeosearch()" ontouchend="clearGeosearch()" title="clear geofilter"><i class="fa-regular fa-trash-can"></i></button> &nbsp;
+
   <select name="radius" id="radius">
     <option value="50">50 m</option>
     <option value="100">100 m</option>
