update map versions

--- a/app/geo-search/index.template.html
+++ b/app/geo-search/index.template.html
@@ -33,7 +33,7 @@
 
 <div class="ogConsole" style="display: none;"></div>
 
-<script type="module" id="og-sandbox-script" src="./src/main.js?v0.004"></script>
+<script type="module" id="og-sandbox-script" src="./src/main.js?vCONZEPT_VERSION"></script>
 
 <script>
   // keyboard control
