--- a/app/map/index.template.html
+++ b/app/map/index.template.html
@@ -31,7 +31,7 @@
 
     <div class="ogConsole" style="display: none;"></div>
 
-    <script type="module" id="og-sandbox-script" src="./src/main.js?v005"></script>
+    <script type="module" id="og-sandbox-script" src="./src/main.js?vCONZEPT_VERSION"></script>
 
   </body>
 
