--- a/app/mars-map/index.html
+++ b/app/mars-map/index.html
@@ -1,6 +1,6 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>OpenGlobus</title>
+    <title>OpenGlobus Mars map</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- conzept resources -->
