--- a/app/map/index.template.html
+++ b/app/map/index.template.html
@@ -18,6 +18,8 @@
 
   <body style="margin:0;">
 
+    <span id="title"></span>
+
     <div id="globus" style="width:100%;height:100%">
 
       <div style="position: absolute; left:0; top:0; padding:10px; z-index:9999;">
