--- a/app/map/index.html
+++ b/app/map/index.html
@@ -18,7 +18,7 @@
 
   <body style="margin:0;">
 
-    <span id="title">...</span>
+    <span id="title"></span>
 
     <div id="globus" style="width:100%;height:100%">
 
