--- a/app/chat/index.html
+++ b/app/chat/index.html
@@ -59,11 +59,12 @@
             <div class="presetSelect presetModelCls">
               <label for="preSetModel">GPT model</label>
               <select id="preSetModel">
-                <option value="gpt-3.5-turbo">gpt-3.5</option>
+                <option value="gpt-4o-mini">gpt-4o-mini</option>
                 <option value="gpt-4o">gpt-4o</option>
                 <option value="gpt-4-turbo">gpt-4-turbo</option>
                 <option value="gpt-4">gpt-4</option>
                 <option value="gpt-4-32k">gpt-4-32k</option>
+                <option value="gpt-3.5-turbo">gpt-3.5</option>
               </select>
             </div>
             <div style="display: none;">
