--- a/app/chat/index.template.html
+++ b/app/chat/index.template.html
@@ -89,7 +89,7 @@
             </div>
             <div>
               <span>character</span>
-              <input type="range" id="top_p" min="0" max="1" value="1" step="0.05" />
+              <input type="range" id="top_p" min="0" max="1" value="0.25" step="0.05" />
               <div class="selectDef">
                 <span>accurate</span>
                 <span>creative</span>
@@ -97,7 +97,7 @@
             </div>
             <div>
               <span>answer quality</span>
-              <input type="range" id="temp" min="0" max="2" value="1" step="0.05" />
+              <input type="range" id="temp" min="0" max="2" value="0.25" step="0.05" />
               <div class="selectDef">
                 <span>repetitive</span>
                 <span>nonsense</span>
@@ -111,6 +111,15 @@
                 <span>fast</span>
               </div>
             </div>
+
+            <div>
+              <span class="inlineTitle">speaking</span>
+              <label class="switch-slide">
+                <input type="checkbox" id="speech" hidden />
+                <label for="speech" class="switch-slide-label"></label>
+              </label>
+            </div>
+
             <div>
               <span class="inlineTitle">continuous dialogue</span>
               <label class="switch-slide">
