--- a/app/chat/index.html
+++ b/app/chat/index.html
@@ -89,7 +89,7 @@
             </div>
             <div>
               <span>character</span>
-              <input type="range" id="top_p" min="0" max="1" value="0.25" step="0.05" />
+              <input type="range" id="top_p" min="0" max="1" value="0.10" step="0.05" />
               <div class="selectDef">
                 <span>accurate</span>
                 <span>creative</span>
@@ -97,15 +97,15 @@
             </div>
             <div>
               <span>answer quality</span>
-              <input type="range" id="temp" min="0" max="2" value="0.25" step="0.05" />
+              <input type="range" id="temp" min="0" max="2" value="0.20" step="0.05" />
               <div class="selectDef">
                 <span>repetitive</span>
                 <span>nonsense</span>
               </div>
             </div>
-            <div>
+            <div style="display:none;">
               <span>writing speed</span>
-              <input type="range" id="textSpeed" min="0" max="100" value="88" step="1" />
+              <input type="range" id="textSpeed" min="0" max="100" value="90" step="1" />
               <div class="selectDef">
                 <span>slow</span>
                 <span>fast</span>
