artifact app download button + styling

--- a/app/artifact/index.html
+++ b/app/artifact/index.html
@@ -44,9 +44,10 @@
                   <textarea id="prompt" name="prompt" rows="4" placeholder="Describe your front-end app in a few sentences"></textarea>
               </div>
               <div class="form-group">
-                <button id="submit" type="submit">Submit</button> &nbsp;<span id="loader" style="display:none;">creating artifact...</span>
+                <button id="submit" type="submit">Submit</button> &nbsp;&nbsp;<span id="loader" style="display:none;"><img id="loader" alt="loading" width="36" height="36" src="../explore2/assets/images/loading.gif"/>&nbsp;creating your artifact...</span>
               </div>
           </form>
+          <button id="download" type="download" title="download artifact" onclick="downloadApp()"><i class="fa-solid fa-file-arrow-down"></i> download</button>
           <div class="credits">
               by <a href="https://x.com/mayfer">murat</a><br />
               clone on <a href="https://github.com/mayfer/open-artifacts">github</a>
