TTS in AI chat + autospeak option

--- a/app/chat/index.template.html
+++ b/app/chat/index.template.html
@@ -112,13 +112,13 @@
               </div>
             </div>
 
-            <div>
-              <span class="inlineTitle">speaking</span>
+           <!--div>
+              <span class="inlineTitle">autospeak</span>
               <label class="switch-slide">
-                <input type="checkbox" id="speech" hidden />
-                <label for="speech" class="switch-slide-label"></label>
+                <input type="checkbox" id="autospeak" hidden />
+                <label for="autospeak" class="switch-slide-label"></label>
               </label>
-            </div>
+            </div-->
 
             <div>
               <span class="inlineTitle">continuous dialogue</span>
