--- a/app/artifact/index.html
+++ b/app/artifact/index.html
@@ -36,12 +36,12 @@
                   <input type="password" id="key" name="api-key" value="" placeholder="sk-xxx-yyyyyyyzzzzzzzz" />
               </div>
               <div class="form-group">
-                  <label for="model-name">Model Name:</label>
+                  <label for="model-name">AI model:</label>
                   <input type="text" id="model-name" name="model-name" value="gpt-4o">
               </div>
               <div class="form-group">
-                  <label for="prompt">App description:</label>
-                  <textarea id="prompt" name="prompt" rows="4" placeholder="Describe your front-end app in a few sentences"></textarea>
+                  <label for="prompt">Description:</label>
+                  <textarea id="prompt" name="prompt" rows="4" placeholder="Describe your artifact or app"></textarea>
               </div>
               <div class="form-group">
                 <button id="submit" type="submit">Submit</button> &nbsp;&nbsp;<span id="loader" style="display:none;"><img id="loader" alt="loading" width="36" height="36" src="../explore2/assets/images/loading.gif"/>&nbsp;creating your artifact...</span>
@@ -67,7 +67,7 @@
     // keyboard control
     $('body').keydown(function(event) {
 
-      if ( $(event.target).is( 'input, select, button' ) ){
+      if ( $(event.target).is( 'input, select, button, textarea' ) ){
 
         return;
 
