--- a/app/chat/index.template.html
+++ b/app/chat/index.template.html
@@ -383,9 +383,9 @@
 
           <span id="input-button-bar">
 
-            <button id="startSpeaking" class="speechButtons" onclick="startSpeaking()" title="start speaking"> <span id="center-icon"><i class="fa-solid fa-play"></i></span></button>
-            <button id="pauseSpeaking" class="speechButtons" onclick="pauseSpeaking()" title="pause speaking"> <span id="center-icon"><i class="fa-solid fa-pause"></i></span></button>
-            <button id="stopSpeaking"  class="speechButtons" onclick="stopSpeaking()" title="stop speaking"> <span id="center-icon"><i class="fa-solid fa-stop"></i></span></button>
+            <!--button id="startSpeaking" class="speechButtons" onclick="startSpeaking()" title="start speaking"> <span id="center-icon"><i class="fa-solid fa-play"></i></span></button-->
+            <button id="pauseSpeaking" style="display:none;" class="" onclick="pauseSpeaking()" title="pause speaking"> <span id="center-icon"><i class="fa-solid fa-pause"></i></span></button>
+            <button id="stopSpeaking"  style="display:none;" class="" onclick="stopSpeaking()" title="stop speaking"> <span id="center-icon"><i class="fa-solid fa-stop"></i></span></button>
 
             <button id="stopChat" title="stop chat">
               <span id="center-icon"><i class="fa-solid fa-stop"></i></span>
