PDF speaker autoscroll fix, video app bookmarking

--- a/app/video/index.html
+++ b/app/video/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <title>conzept video</title>
-    <!-- © Copyright 2019-2021 Jama Poulsen. All Rights Reserved. -->
+    <!-- © Copyright Jama Poulsen. All Rights Reserved. -->
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
