video app bookmarking

--- a/app/video/index.template.html
+++ b/app/video/index.template.html
@@ -16,6 +16,7 @@
 
     <script src="../explore2/node_modules/immortal-db/dist/immortal-db.min.js"></script>
 
+    <a href="javascript:void(0)" id="bookmark-video" style="display:none;" title="bookmark video"><i class="far fa-bookmark fa-2x"></i></a>
     <a href="javascript:void(0)" id="wander-to-previous" style="display:none;" title="view previous video"><i class="fas fa-left-long fa-2x"></i></a>
     <a href="javascript:void(0)" id="wander-to-next" style="display:none;" title="view next video"><i class="fas fa-right-long fa-2x"></i></a>
     <a id="wander-youtube-terms" target="_blank" href="https://www.youtube.com/t/terms" style="display:none;" title="YouTube terms of use">YouTube terms</a>
