--- a/app/video/:index.template.html
+++ b/app/video/:index.template.html
@@ -21,8 +21,8 @@
     <a href="javascript:void(0)" id="wander-to-next" style="display:none;" title="view next video"><i class="fas fa-right-long fa-2x"></i></a>
     <a id="wander-youtube-terms" target="_blank" href="https://www.youtube.com/t/terms" style="display:none;" title="YouTube terms of use">YouTube terms</a>
 
-    <link rel="stylesheet" href="styles/vendor.css?v0.16">
-    <link rel="stylesheet" href="styles/main.css?v0.16">
+    <link rel="stylesheet" href="styles/vendor.css?0.16">
+    <link rel="stylesheet" href="styles/main.css?0.16">
 
 </head>
 <body id="video-app" ng-app="tooglesApp" ng-class="{dark: darkmode}">
@@ -82,7 +82,7 @@
       });
     </script>
 
-    <script src="bundle.js?v0.16"></script>
+    <script src="bundle.js?v0.005"></script>
 
 </body>
 </html>
