make video URL bookmark uniform

--- a/app/video/index.html
+++ b/app/video/index.html
@@ -16,12 +16,13 @@
 
     <script src="../explore2/node_modules/immortal-db/dist/immortal-db.min.js"></script>
 
+    <a href="javascript:void(0)" id="bookmark-video-wander" style="display:none;" title="bookmark video"><i class="far fa-bookmark fa-2x"></i></a>
     <a href="javascript:void(0)" id="wander-to-previous" style="display:none;" title="view previous video"><i class="fas fa-left-long fa-2x"></i></a>
     <a href="javascript:void(0)" id="wander-to-next" style="display:none;" title="view next video"><i class="fas fa-right-long fa-2x"></i></a>
     <a id="wander-youtube-terms" target="_blank" href="https://www.youtube.com/t/terms" style="display:none;" title="YouTube terms of use">YouTube terms</a>
 
-    <link rel="stylesheet" href="styles/vendor.css?0.15">
-    <link rel="stylesheet" href="styles/main.css?0.15">
+    <link rel="stylesheet" href="styles/vendor.css?v0.16">
+    <link rel="stylesheet" href="styles/main.css?v0.16">
 
 </head>
 <body id="video-app" ng-app="tooglesApp" ng-class="{dark: darkmode}">
@@ -81,7 +82,7 @@
       });
     </script>
 
-    <script src="bundle.js?v0.004"></script>
+    <script src="bundle.js?v0.16"></script>
 
 </body>
 </html>
