prepare language-neutral AI chat prompting

--- a/app/chat/index.template.html
+++ b/app/chat/index.template.html
@@ -24,6 +24,7 @@
     <!-- conzept resources -->
     CONZEPT_COMMON_HTML_INCLUDE
 
+    <script src="../explore2/dist/data/languages.js?vCONZEPT_VERSION"></script>
     <script src="../explore2/node_modules/immortal-db/dist/immortal-db.min.js"></script>
 
     <link rel="stylesheet" href="css/main.css?vCONZEPT_VERSION">
@@ -222,7 +223,7 @@
           <div id="recOption" style="display: none;">
             <div id="noRecTip" style="display: block;">Your browser does not support speech recognition</div>
             <div id="yesRec" style="display: none;">
-              <div class="presetSelect presetModelCls">
+              <div style="display;none;" class="presetSelect presetModelCls">
                 <label for="selectLangOption">language</label>
                 <select id="selectLangOption"></select>
               </div>
