--- a/app/chat/index.html
+++ b/app/chat/index.html
@@ -24,6 +24,7 @@
     <!-- conzept resources -->
     <link href="/assets/fonts/podcastfont/css/PodcastFont.css?v202306131635" rel="stylesheet" type="text/css"><link href="/assets/fonts/fontawesome/css/all.min.css?v6.5.1" rel="stylesheet" type="text/css"><link href="/app/explore2/dist/css/conzept/common.css?v0.51.4836" rel="stylesheet" type="text/css"> <script src="/app/explore2/dist/core/env.js?v0.51.4836"></script><script src="/app/explore2/dist/core/utils.js?v0.51.4836"></script><script src="/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0"></script><a href="javascript:void(0)" id="fullscreenToggle" onclick="document.toggleFullscreen()" class="global-actions"><i id="fullscreenIcon" title="fullscreen toggle" class="fas fa-expand"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script><script src="/app/explore2/libs/TinyGesture.js"></script>
 
+    <script src="../explore2/dist/data/languages.js?v0.51.4836"></script>
     <script src="../explore2/node_modules/immortal-db/dist/immortal-db.min.js"></script>
 
     <link rel="stylesheet" href="css/main.css?v0.51.4836">
@@ -222,7 +223,7 @@
           <div id="recOption" style="display: none;">
             <div id="noRecTip" style="display: block;">Your browser does not support speech recognition</div>
             <div id="yesRec" style="display: none;">
-              <div class="presetSelect presetModelCls">
+              <div style="display;none;" class="presetSelect presetModelCls">
                 <label for="selectLangOption">language</label>
                 <select id="selectLangOption"></select>
               </div>
