--- a/app/talk/index.html
+++ b/app/talk/index.html
@@ -1,12 +1,1 @@
-<!doctype html>
-<html lang=en>
-<head>
-  <meta charset=utf-8>
-<title>AI talk app</title>
-<base href=".">
-</head>
-<body>
-  <p>AI talk</p>
-  <script type="module" src="./index.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/openai-logomark.svg"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>realtime console</title><link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet"/><link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/><script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script><script defer="defer" src="/static/js/main.a282fe13.js"></script><link href="/static/css/main.4e3895ad.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
